--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    box-sizing:border-box
+    box-sizing: border-box;
 }
 
 body{
@@ -7,21 +7,12 @@ body{
     padding:0;
 }
 
-.js-map{
+.map{
     height:100vh;
     width:100vw;
 }
 
-.pop-coordinat{
-    content: "";
-    position: absolute;
-    background-color: white;
-    padding-top:4px;
-    padding-bottom: 4px;
-    padding-left:4px;
-    padding-right:4px;
-    margin-left: 2px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: red;
+#popup-coordinate{
+    position:'relative';
+    background-color: green;
 }
