--- a/style.css
+++ b/style.css
@@ -7,9 +7,24 @@ body{
     padding:0;
 }
 
-.map{
-    height:100vh;
-    width:100vw;
+.grid-container{
+    display:grid;
+    grid-template-columns: 85vw 15vw;
+    grid-template-rows: 100vh;
+    border-top: 3px;
+    border-left: 3px;
+    border-right: 3px;
+    border-bottom: 3px;
+    border-color: black;
+    padding: 1px;
+    border-width: 2px;
+    border-style: groove;
+    color: blue;
+    font-family: "Lucida Console", "Courier New", monospace;
+    padding: 3px;
+}
+.sidebar{
+    margin-left:15px;
 }
 
 #popup-coordinate{
@@ -18,9 +33,18 @@ body{
 }
 
 .overlay-container{
-    background-color: red;
-    border-top: 2px;
-    border-left: 2px;
-    border-right: 2px;
-    border-bottom: 2px;
+    background-color: skyblue;
+    border-top: 3px;
+    border-left: 3px;
+    border-right: 3px;
+    border-bottom: 3px;
+    border-color: black;
+    padding: 1px;
+    border-width: 2px;
+    border-style: groove;
+    color: blue;
+    font-family: "Lucida Console", "Courier New", monospace;
+    padding: 3px;
 }
+
+
