--- a/ksrdpru_web_mapping/style.css
+++ b/ksrdpru_web_mapping/style.css
@@ -8,6 +8,7 @@ body{
 }
 
 .map{
+    /*position: absolute;*/
     height:100vh;
     width:100vw;
 }
@@ -44,3 +45,11 @@ body{
 
 }
 */
+
+#measuretype {
+    position: absolute;
+    z-index: 600;
+    top: 1%;
+    left: 60%;
+    width: 15%;
+}
